# verified-edr

./: .gitignore
AVATAR_executablecode/: Makefile  Makefile.compile  Makefile.defs  Makefile.soclib  Makefile.src  mesure-time.bash
AVATAR_executablecode/fstar/: Makefile  const.fst  parseDoor.fst  parseIndicator.fst  parseSpeed.fst
AVATAR_executablecode/generated_src/: .gitignore  EDRSystemBlock.c  EDRSystemBlock.h  main.c  main.h
AVATAR_executablecode/misrac/: packetCapture.c  packetCapture.h
AVATAR_executablecode/rust/: Cargo.toml  Makefile
AVATAR_executablecode/rust/src/: main.rs  record_in_edr.rs
rust/: Cargo.toml
rust-build/: .gitignore  Cargo.toml  Makefile  README.md
rust-build/src/: bye.rs  lib.rs
rust/src/: record_in_edr.rs
src/: packetCapture.c
src/fstar_src/: Makefile  parseDoor.fst  parseIndicator.fst  parseSpeed.fst
