[package]
name = "rust"
version = "1.0.0"
authors = ["TakuKitamura <takukitamura.io@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]      # 動的ライブラリ
# crate-type = ["staticlib"] # 静的ライブラリ

[dependencies]
once_cell = "1.8.0"
chrono = "0.4.19"
